# finparser

./: .gitignore  CLAUDE.md  project_end_goal.txt  pyproject.toml
src/finparser/: __init__.py  agent.py  cli.py  excel.py  models.py  parser.py  web.py
src/finparser/templates/: index.html
